# orc-life-game

./: .gitignore  README.md  pyproject.toml
entregables/: proyecto-automatas.ipynb
entregables/video/: video-youtube-link.txt
src/orc_automata/: __init__.py  config.py  environment.py  main.py  orc.py  simulation.py
src/orc_automata/assets/: __init__.py
src/orc_automata/rendering/: colors.py  pygame_renderer.py
